--- a/src/app/pages/features-page/features-page.component.html
+++ b/src/app/pages/features-page/features-page.component.html
@@ -9,7 +9,7 @@
           <!--Section heading-->
           <h1 class="section-heading pt-4" style="margin-top:0rem; margin-bottom:2rem">Was macht uns so besonders?</h1>
           <!--Section description-->
-          <p class="section-description lead grey-text" style="margin-bottom:2rem">Entdecken Sie jetzt die vielfältigen Funktionen und Vorteile von EventPicKing.</p>
+          <p class="grey-text" style="margin-bottom:2rem">Entdecken Sie jetzt die vielfältigen Funktionen und Vorteile von EventPicKing!</p>
 
           <!--Grid row-->
           <div class="row pb-3">
@@ -18,39 +18,33 @@
             <div class="col-lg-7">
 
               <div class="col-10 col-md-9 col-lg-10 float-right">
-                <h4 class="feature-title">Wir bringen Fotografen und Kunden zusammen
+                <h4 class="feature-title">Wir bringen Fotografen und Kunden zusammen</h4>
+                <p class="grey-text">Erstellen Sie ganz einfach ein Event über unser Portal und laden Sie alle Veranstaltungsbilder hoch. Durch
+                  einen Link können Sie den Nutzern einen Zugriff auf die Bilder ermöglichen.</p>
 
-                </h4>
-
-                <p class="grey-text">Erstellen Sie ganz einfach ein Event über unser Portal und laden alle Bilder von der gewünschten Veranstaaltung
-                  hoch. Durch einen Link können Sie den Nutzern einen Zugriff auf die Bilder ermöglichen.
-                </p>
-
-                <a class="btn btn-primary btn-sm ml-0 waves-light" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
+                <a class="btn pink ml-0 waves-light" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
                 <br>
                 <br>
               </div>
 
               <div class="col-10 col-md-9 col-lg-10 float-right">
-                <h4 class="feature-title">Eventfotos schnell und simpel verkaufen
-
-                </h4>
+                <h4 class="feature-title">Eventfotos schnell und simpel verkaufen</h4>
                 <p class="grey-text">Die von Ihnen erstellten Fotos können Sie einfach über unser Portal an Ihre Kunden verkaufen. Sie haben die
-                  Wahl ob dies über eine Druckerei Ihres Vertrauens passiert oder ob die Abwicklung über unsere Druckerei
-                  erfolgen soll.
+                  Wahl, ob dies über die Druckerei Ihres Vertrauens abgewickelt wird, oder ob die Abwicklung über unsere
+                  Druckerei erfolgen soll.
                 </p>
-                <a class="btn btn-green btn-sm ml-0 waves-light" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
+
+                <a class="btn pink ml-0 waves-light" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
                 <br>
                 <br>
 
               </div>
 
               <div class="col-10 col-md-9 col-lg-10 float-right">
-                <h4 class="feature-title">Finden Sie den passenden Fotografen in Ihrer Nähe
-                </h4>
+                <h4 class="feature-title">Finden Sie den passenden Fotografen in Ihrer Nähe</h4>
                 <p class="grey-text">Sie suchen für Ihre Veranstaltung einen Fotograf in Ihrer Nähe? Wir bieten Ihnen die Möglichkeit über unser
                   Portal die besten Fotografen zu finden.</p>
-                <a class="btn btn-pink btn-sm ml-0 waves-light" routerLink="/search" mdbRippleRadius>Mehr erfahren</a>
+                <a class="btn pink ml-0 waves-light" routerLink="/search" mdbRippleRadius>Mehr erfahren</a>
 
                 <br>
                 <br>
