--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -4,12 +4,12 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-6  text-center">
-                    <h1>EventPickKing </h1>
+                    <h1>EventPicKing </h1>
                     <br>
                     <h5>Willkommen bei ihrem Spezialisten für Event-Fotografie</h5>
                     <p>
-                        Finden sie einen Fotografen für ihr Event, kaufen sie schnell und bequem ihre Bilder online, oder registrieren sie sich als
-                        Fotograf um für Events gebucht zu werden!
+                        Finden Sie einen Fotografen für ihr Event, kaufen Sie schnell und bequem ihre Bilder online, oder registrieren Sie sich als
+                        Fotograf, um für Events gebucht zu werden!
                     </p>
                     <p>
                         <button id="landing_signup" class="btn btn-outline-info btn-rounded waves-effec" routerLink="/signup">{{ 'BUTTONS.SINGUP_NOW' | translate }}</button>
@@ -27,13 +27,11 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 text-center">
                     <h1>Description</h1>
-                    <div class="text">
+                    <div class="text" style="color: grey">
                         <p>Events ablegen, Bilder hochladen, teilen und verkaufen!</p>
-                        <br>
-                        <p>Verkaufen sie unsere Fotos schnell über unser Portal. Wir kümmern uns um Zahlungsabwicklung, Produktion
-                            und Versand.</p>
-                        <br>
-                        <p>Sie machen die Bilder und wir den Rest!</p>
+                        <p>Verkaufen Sie Ihre Fotos schnell über unser Portal. Wir kümmern uns sowohl um Zahlungsabwicklung,
+                            Produktion als auch Versand.</p>
+                        <p>Sie schießen die Bilder - wir machenden Rest!</p>
                     </div>
                 </div>
             </div>
@@ -47,7 +45,7 @@
         <div class="container">
             <h2>{{'TEXTS.LANDING_BESTPICTURES' | translate}}</h2>
             <p class="text-center">
-                Professionelle Bilder von Professionellen Fotografen. Finden Auch sie den perfekten Fotografen für ihr Event!
+                Professionelle Bilder von professionellen Fotografen. Finden auch sie den perfekten Fotografen für Ihr Event!
             </p>
         </div>
         <!-- end-container -->
@@ -83,8 +81,8 @@
     <div id="testimonial" class="testimonial">
         <div class="container">
             <h2>{{'LABELS.TESTIMONIALS'|translate}}</h2>
-            <p class="text-center">Egal ob Fotograf, Gast oder Organisator einer Veranstaltung - Wir unterstützen sie und garantieren maximale Zufriedenheit.
-                Überzeugen sie sich selbst!
+            <p class="text-center">Egal ob Fotograf, Gast oder Organisator einer Veranstaltung - Wir unterstützen Sie und bieten große Zufriedenheit.
+                Überzeugen Sie sich selbst!
             </p>
             <div class="row">
                 <div class="col-md-4 mb-r">
@@ -94,8 +92,8 @@
                     <h4 class="mb-3">Stephan Naumann</h4>
                     <h6 class="mb-3 font-bold grey-text">{{'LABELS.PHOTOGRAPHER'|translate}}</h6>
                     <p>
-                        <i class="fa fa-quote-left"></i>„Super Website um Kunden zu erreichen. Preis- Leistungsverhältnis von EventPicKing TOP. Werde
-                        weitere Zusammenarbeit gerne beibehalten.
+                        <i class="fa fa-quote-left"></i>&nbsp;Super Website, um Kunden zu erreichen! Preis-Leistungsverhältnis von EventPicKing TOP.
+                        Werde Zusammenarbeit gerne beibehalten.
                         <i class="fa fa-quote-right"></i>
                     </p>
                     <div class="orange-text" style="margin-top: 30px">
@@ -103,6 +101,7 @@
                         <i class="fa fa-star"> </i>
                         <i class="fa fa-star"> </i>
                         <i class="fa fa-star"> </i>
+                        <i class="fa fa-star-o"> </i>
                     </div>
                     <!--review1-end-->
                 </div>
@@ -115,9 +114,9 @@
                     <h4 class="mb-3">Leonie Dürr</h4>
                     <h6 class="mb-3 font-bold grey-text">{{'LABELS.EVENT_ORGANISATOR'|translate}}</h6>
                     <p>
-                        <i class="fa fa-quote-left"></i>Traumhaft schöne Bilder unserer Hochzeit, die uns ein Leben lang begleiten werden. Vielen Dank
-                        für die professionelle Begleitung von unserem großen Tag. Fotografensuche ist benutzerfreundlich
-                        und leicht zu bedienen. EventPicKing zu 100% empfehlenswert.
+                        <i class="fa fa-quote-left"></i>&nbsp;Traumhaft schöne Bilder unserer Hochzeit, die uns ein Leben lang begleiten werden. Vielen
+                        Dank für die professionelle Begleitung von unserem großen Tag. Fotografensuche ist benutzerfreundlich
+                        und leicht zu bedienen. EventPicKing ist zu 100% empfehlenswert!
                         <i class="fa fa-quote-right"></i>
                     </p>
                     <div class="orange-text" style="margin-top: 30px">
@@ -138,8 +137,9 @@
                     <h4 class="mb-3">Marianne Faust</h4>
                     <h6 class="mb-3 font-bold grey-text">{{'LABELS.EVENT_GUEST'|translate}}</h6>
                     <p>
-                        <i class="fa fa-quote-left"></i>Schöne Bilder von der Hochzeit meiner Cousine in Darmstadt-Wixhausen. Fotos sind einfach zu erwerben
-                        und gleich über eine (Wunsch)Druckerei druckbar. PayPal wird unterstützt.
+                        <i class="fa fa-quote-left"></i>&nbsp;Schöne Bilder von der Hochzeit meiner Cousine in Darmstadt-Wixhausen. Fotos sind einfach
+                        zu erwerben und gleich über eine (Wunsch-) Druckerei druckbar. Vor allem die PayPal-Zahlung ist für
+                        mich ein Pluspunkt!
                         <i class="fa fa-quote-right"></i>
                     </p>
                     <div class="orange-text" style="margin-top: 30px">
