--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -39,7 +39,7 @@
           </div>
 
           <div class="text-center mb-3">
-            <button type="submit" class="btn indigo btn-lg btn-block" id="button_login" [disabled]="!loginForm.valid">{{ 'BUTTONS.LOGIN' | translate }}</button>
+            <button type="submit" class="btn pink btn-lg btn-block" id="button_login" [disabled]="!loginForm.valid">{{ 'BUTTONS.LOGIN' | translate }}</button>
           </div>
         </form>
 
@@ -49,16 +49,16 @@
           <!--Facebook-->
           <button type="button" class="btn btn-white btn-rounded mr-md-3 z-depth-1a waves-effect waves-light" (click)="loginWithFacebook()"
             id="button_login_with_facebook">
-            <i class="fa fa-facebook blue-text text-center"></i>
+            <i class="fa fa-facebook pink-text text-center"></i>
           </button>
           <!--Twitter-->
           <button type="button" class="btn btn-white btn-rounded mr-md-3 z-depth-1a waves-effect waves-light" (click)="loginWithTwitter()"
             id="button_login_with_twitter">
-            <i class="fa fa-twitter blue-text"></i>
+            <i class="fa fa-twitter pink-text"></i>
           </button>
           <!--Google +-->
           <button type="button" class="btn btn-white btn-rounded z-depth-1a waves-effect waves-light" (click)="loginWithGoogle()" id="button_login_with_google">
-            <i class="fa fa-google-plus blue-text"></i>
+            <i class="fa fa-google-plus pink-text"></i>
           </button>
         </div>
 
