--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -11,7 +11,7 @@
     <br/>
     <table class="table table-striped table-responsive-sm">
       <!-- Table headings -->
-      <thead id="sum_row">
+      <thead id="sum_row" class="indigo">
         <tr>
           <th scope="col">{{ 'NAV.CART_PICTURE' | translate }}</th>
           <th scope="col">{{ 'NAV.CART_TYPE' | translate }}</th>
@@ -59,8 +59,8 @@
     </table>
     <!-- Buttons to previous or next step -->
     <div class="row justify-content-end">
-      <button type="button" class="btn btn-primary waves-light col-sm-3" mdbRippleRadius>{{ 'BUTTONS.CONTINUE_SHOPPING' | translate }}</button>
-      <button type="button" class="btn btn-primary waves-light col-sm-3" routerLink="/check-out" mdbRippleRadius>{{ 'BUTTONS.PROCEED_TO_CHECKOUT' | translate }}</button>
+      <button type="button" class="btn pink waves-light col-sm-3" mdbRippleRadius>{{ 'BUTTONS.CONTINUE_SHOPPING' | translate }}</button>
+      <button type="button" class="btn pink waves-light col-sm-3" routerLink="/check-out" mdbRippleRadius>{{ 'BUTTONS.PROCEED_TO_CHECKOUT' | translate }}</button>
     </div>
     <!-- END buttons -->
   </div>
