--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="text-center mb-3">
-          <button type="submit" [disabled]="!signupForm.valid" class="btn indigo btn-lg btn-block" id="button_login">{{ 'LABELS.SIGN_UP' | translate }}</button>
+          <button type="submit" [disabled]="!signupForm.valid" class="btn pink btn-lg btn-block" id="button_login">{{ 'LABELS.SIGN_UP' | translate }}</button>
         </div>
         <p class="font-small dark-grey-text text-right d-flex justify-content-center mb-3 pt-2"> {{ 'LABELS.SIGN_UP_WITH' | translate }}
         </p>
@@ -63,16 +63,16 @@
         <!--Facebook-->
         <button type="button" class="btn btn-white btn-rounded mr-md-3 z-depth-1a waves-effect waves-light" (click)="loginWithFacebook()"
           id="button_login_with_facebook">
-          <i class="fa fa-facebook blue-text text-center"></i>
+          <i class="fa fa-facebook pink-text text-center"></i>
         </button>
         <!--Twitter-->
         <button type="button" class="btn btn-white btn-rounded mr-md-3 z-depth-1a waves-effect waves-light" (click)="loginWithTwitter()"
           id="button_login_with_twitter">
-          <i class="fa fa-twitter blue-text"></i>
+          <i class="fa fa-twitter pink-text"></i>
         </button>
         <!--Google +-->
         <button type="button" class="btn btn-white btn-rounded z-depth-1a waves-effect waves-light" (click)="loginWithGoogle()" id="button_login_with_google">
-          <i class="fa fa-google-plus blue-text"></i>
+          <i class="fa fa-google-plus pink-text"></i>
         </button>
       </div>
 
@@ -134,7 +134,7 @@
         </div>
 
         <div class="text-center mb-3">
-          <button type="submit" [disabled]="!signupForm.valid && !photographerUrlAvailable" [disabled]="" class="btn indigo btn-lg btn-block"
+          <button type="submit" [disabled]="!signupForm.valid && !photographerUrlAvailable" [disabled]="" class="btn pink btn-lg btn-block"
             id="button_login">{{ 'LABELS.SIGN_UP' | translate }}</button>
         </div>
       </form>
