--- a/src/app/components/dashboard-photographer/dashboard-photographer.component.html
+++ b/src/app/components/dashboard-photographer/dashboard-photographer.component.html
@@ -258,7 +258,14 @@
 
         </mdb-tabset>
 
-        <button type="button" class="btn btn-lg btn-block waves-light indigo" mdbRippleRadius (click)="updatePriceList()">Save</button>
+        <br>
+        <div class="row no-gutters justify-content-start" style="align-items: center">
+          <div class="col-4"></div>
+          <div class="col-4">
+            <button type="button" class="btn btn-lg btn-block waves-light pink" mdbRippleRadius (click)="updatePriceList()">Save</button>
+          </div>
+          <div class="col-4"></div>
+        </div>
 
       </div>
     </div>
@@ -419,7 +426,7 @@
               </mdb-item-body>
             </mdb-item>
             <mdb-item>
-              <mdb-item-head>Billing Informations</mdb-item-head>
+              <mdb-item-head>Billing Information</mdb-item-head>
               <mdb-item-body>
                 <br>
                 <form>
@@ -468,7 +475,16 @@
               </mdb-item-body>
             </mdb-item>
           </mdb-squeezebox>
-          <button type="button" class="btn btn-lg btn-block waves-light indigo" mdbRippleRadius (click)="updatePrintingHouse()">Update printing house</button>
+
+          <br>
+          <div class="row no-gutters justify-content-start" style="align-items: center">
+            <div class="col-4"></div>
+            <div class="col-4">
+              <button type="button" class="btn btn-lg btn-block waves-light pink" mdbRippleRadius (click)="updatePrintingHouse()">Update printing house</button>
+            </div>
+            <div class="col-4"></div>
+          </div>
+
         </div>
       </div>
     </div>
@@ -609,7 +625,7 @@
           </div>
           <div class="col-4"></div>
         </div>
-        
+
       </div>
     </div>
   </mdb-tab>
@@ -649,7 +665,7 @@
           </div>
 
           <div class="text-center mt-1-half">
-            <button type="submit" class="btn indigo mb-2 waves-light" mdbRippleRadius>{{ 'LABELS.CREATE' | translate }}
+            <button type="submit" class="btn pink mb-2 waves-light" mdbRippleRadius>{{ 'LABELS.CREATE' | translate }}
               <i class="fa fa-plus ml-1"></i>
             </button>
           </div>
