added format-price listener
-if a format is clicked by the user, the price will be updated
-bugfixing

--- a/src/app/components/picture-detail/picture-detail.component.html
+++ b/src/app/components/picture-detail/picture-detail.component.html
@@ -48,15 +48,17 @@
           </div>
           <div class="col-12 col-lg-4 vertical-ruler p-3">
             <div class="btn-group">
-              <label class="btn btn-primary waves-light" [(ngModel)]="radioModel" mdbRadio="Left" mdbRippleRadius (click)="this.templateType = this.download">
+              <label class="btn btn-primary waves-light" [(ngModel)]="radioModel" mdbRadio="Left" mdbRippleRadius (click)="this.templateType = this.download; this.price = undefined">
                 <i class="fa fa-download fa-5x" aria-hidden="true"></i>
               </label>
-              <label class="btn btn-primary waves-light" [(ngModel)]="radioModel" mdbRadio="Right" mdbRippleRadius (click)="this.templateType = this.print">
+              <label class="btn btn-primary waves-light" [(ngModel)]="radioModel" mdbRadio="Right" mdbRippleRadius (click)="this.templateType = this.print; this.price = undefined">
                 <i class="fa fa-print fa-5x" aria-hidden="true"></i>
               </label>
             </div>
+
             <ng-container *ngTemplateOutlet="templateType"></ng-container>
-            <button type="button" class="btn btn-default btn-lg btn-block waves-light" mdbRippleRadius>
+
+            <button type="button" class="btn btn-default btn-lg btn-block waves-light" mdbRippleRadius (click)="addToShoppingCart()">
               <i class="fa fa-shopping-cart mr-1"></i> {{ 'BUTTONS.ADD_TO_SHOPPING_CART' | translate }}</button>
           </div>
         </div>
@@ -72,44 +74,16 @@
         <tr>
           <td>
             <p>{{ 'LABELS.FORMAT' | translate }}:</p>
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio1">
-              <label for="radio1">{{ 'LABELS.EXTRA_EXTRA_SMALL' | translate }}</label>
-            </div>
-
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio2">
-              <label for="radio2">{{ 'LABELS.EXTRA_SMALL' | translate }}</label>
-            </div>
-
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio3">
-              <label for="radio3">{{ 'LABELS.SMALL' | translate }}</label>
-            </div>
-
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio4" checked="checked">
-              <label for="radio4">{{ 'LABELS.MEDIUM' | translate }}</label>
-            </div>
-
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio5">
-              <label for="radio5">{{ 'LABELS.LARGE' | translate }}</label>
-            </div>
-
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio6">
-              <label for="radio6">{{ 'LABELS.EXTRA_LARGE' | translate }}</label>
-            </div>
-
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio7">
-              <label for="radio7">{{ 'LABELS.ORIGINAL' | translate }}</label>
+            <div *ngIf="priceList" class="form-group">
+              <div *ngFor="let downloadItem of priceList.downloadItems; let i = index">
+                <input name="group1" type="radio" class="with-gap" id="radio{{i}}" (click)="changeFormat('download', downloadItem.name)">
+                <label for="radio{{i}}">{{downloadItem.name}}</label>
+              </div>
             </div>
           </td>
         </tr>
         <tr>
-          <td>{{ 'LABELS.PRICE' | translate }}: PRICE €</td>
+          <td *ngIf="!(price === undefined)">{{ 'LABELS.PRICE' | translate }}: {{price}}€</td>
         </tr>
       </table>
     </div>
@@ -121,45 +95,16 @@
         <tr>
           <td>
             <p>{{ 'LABELS.FORMAT' | translate }}:</p>
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio8">
-              <label for="radio8">20x30 cm</label>
-            </div>
-
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio9">
-              <label for="radio9">30x40 cm</label>
-            </div>
-
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio10">
-              <label for="radio10">30x45 cm</label>
-            </div>
-
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio11" checked="checked">
-              <label for="radio11">40x60 cm</label>
-            </div>
-
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio12">
-              <label for="radio12">45x60 cm</label>
-            </div>
-
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio13">
-              <label for="radio13">50x75 cm</label>
-            </div>
-
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio14">
-              <label for="radio14">60x80 cm</label>
+            <div *ngIf="priceList" class="form-group">
+              <div *ngFor="let article of printPicturePriceList; let i = index">
+                <input name="group1" type="radio" class="with-gap" id="radio{{i}}" (click)="changeFormat('print', article.name)">
+                <label for="radio{{i}}">{{article.name}}</label>
+              </div>
             </div>
           </td>
         </tr>
         <tr>
-          <td>{{ 'LABELS.PRICE' | translate }}:</td>
-          <td>PRICE €</td>
+          <td *ngIf="!(price === undefined)">{{ 'LABELS.PRICE' | translate }}: {{price}}€</td>
         </tr>
       </table>
     </div>
